<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswordManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="url">URL</string>
    <string name="url_hint">Site URL</string>
    <string name="title">Title</string>
    <string name="title_hint">Profile Title</string>
    <string name="usr">User Name</string>
    <string name="usr_hint">Site User Name</string>
    <string name="password">Password</string>
    <string name="title_activity_profile_manager">ProfileManager</string>
    <string name="add_profile">Add New Profile</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_dialog">Enter Master Password</string>
    <string name="dialog_btn">Save</string>

</resources>
